--- a/index.html
+++ b/index.html
@@ -1,19 +1,62 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>News of Nation</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 
 <body>
+    <header>
+        <!-- navbar section  start -->
+
+        <section class="container">
+            <nav class="navbar bg-light">
+                <div class="container-fluid ">
+                    <div><a class="navbar-brand  fw-bold"> <span class=" bg-info text-light  fw-bold ">NEWS</span> OF
+                            NATION</a></div>
+                    <div class="d-flex justify-content-end " role="search">
+                        <button class="btn btn-light m-4 h-25">News</button>
+                        <!-- <input class="form-control me-2 " type="search" placeholder="Search" aria-label="Search"> -->
+                        <button class="btn btn-light m-4 h-25" type="submit">BLOG</button>
+                        <img class="img-fluid rounded float-end w-25 h-25" src="image/player-1.png" alt="">
+                    </div>
+                </div>
+
+            </nav>
+            <hr>
+        </section>
+        <!-- navbar section  end -->
 
 
 
+
+
+    </header>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
     <script src="js/news.js"></script>
-
 </body>
 
 </html>
