--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>News of Nation</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/51678f4053.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class=" bg-black   ">
     <header>
         <!-- navbar section  start -->
 
@@ -31,13 +32,112 @@
         </section>
         <!-- navbar section  end -->
 
+        <!-- catagory section start  -->
+
+        <section class="container">
+            <div id="display-catagory" class="d-flex flex-wrap justify-content-between mt-3">
 
 
+            </div>
 
+
+        </section>
+
+        <!-- catagory section end -->
 
     </header>
 
+    <main>
+        <!-- diplay news section start  -->
+        <section class="container">
+            <div id="display-details" class="row">
+                <div class="col">
+                    <!-- 
+                    <div class="card mb-3 my-3">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="..." class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body ">
 
+                                    <div class="mb-5">
+                                        <h4 class="card-title">Card title</h4>
+                                        <p class="card-text">This is a wider card with supporting text below as a
+                                            natural
+                                            lead-in to additional content. This content is a little bit longer.</p>
+                                    </div>
+
+                                    <div class="d-flex justify-content-between align-items-end mb-0 mt-5 ">
+                                        <div class="w-100 bg-danger mx-2">
+                                            <img class="img-fluid w-25 mx-5" src="image/player-1.png" alt="">
+                                            <p class="text-center">authors name</p>
+                                            <p class="text-center">publishd</p>
+                                        </div>
+
+                                        <div class="w-100   bg-danger mx-2">review <i class="fa-solid fa-eye"></i>
+                                        </div>
+                                        <div class="w-100  bg-danger mx-2">
+                                            <span class="text-warning">
+                                                <i class="fa-solid fa-star"></i>
+                                                <i class="fa-solid fa-star"></i>
+                                                <i class="fa-solid fa-star"></i>
+                                                <i class="fa-solid fa-star-half-stroke"></i>
+                                            </span>
+                                            <span> 3.5 </span>
+                                        </div>
+
+                                        <div type="button" data-bs-toggle="modal" data-bs-target="#newsModal"
+                                            class="w-100   bg-danger mx-2 text-end">
+                                            <button onclick="" class="btn btn-light ">
+                                                <i class="fa-solid fa-arrow-right">
+
+                                                </i>
+                                            </button>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div> -->
+
+                </div>
+
+            </div>
+        </section>
+        <!-- diplay news section start  -->
+
+        <!-- modal section start  -->
+        <section class="container">
+            <!-- Button trigger modal -->
+            <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newsModal">
+                Launch demo modal
+            </button> -->
+
+            <!-- Modal -->
+            <div class="modal fade" id="newsModal" tabindex="-1" aria-labelledby="newsModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="newsModalLabel">Modal title</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            ...
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Save changes</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- modal section end -->
+
+
+    </main>
 
 
 
