--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div><a class="navbar-brand  fw-bold"> <span class=" bg-info text-light  fw-bold ">NEWS</span> OF
                             NATION</a></div>
                     <div class="d-flex justify-content-end " role="search">
-                        <button class="btn btn-light m-4 h-25">News</button>
+                        <button id="navbar-news" class="btn btn-light m-4 h-25">News</button>
                         <!-- <input class="form-control me-2 " type="search" placeholder="Search" aria-label="Search"> -->
                         <button class="btn btn-light m-4 h-25" type="submit">BLOG</button>
                         <img class="img-fluid rounded float-end w-25 h-25" src="image/player-1.png" alt="">
@@ -120,15 +120,15 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="newsModalLabel">Modal title</h5>
+                            <h5 class="modal-title " id="newsModalLabel">Modal title</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
-                        <div class="modal-body">
+                        <div id="Modal-body" class="modal-body ">
                             ...
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Save changes</button>
+
                         </div>
                     </div>
                 </div>
