--- a/index.html
+++ b/index.html
@@ -48,6 +48,20 @@
     </header>
 
     <main>
+        <!-- news  number section start -->
+        <section class="container">
+            <div class="mb-3 mt-3">
+                <!-- <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label> -->
+                <textarea class="form-control fw-bolder fs-4 p-3 " id="Textarea1" rows="1"></textarea>
+            </div>
+        </section>
+
+
+
+        <!-- news  number section end -->
+
+
+
         <!-- diplay news section start  -->
         <section class="container">
             <div id="display-details" class="row">
