--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/51678f4053.js" crossorigin="anonymous"></script>
 </head>
 
-<body class=" bg-black   ">
+<body class="  ">
     <header>
         <!-- navbar section  start -->
 
@@ -55,11 +55,20 @@
                 <textarea class="form-control fw-bolder fs-4 p-3 " id="Textarea1" rows="1"></textarea>
             </div>
         </section>
-
-
-
         <!-- news  number section end -->
 
+        <!-- sort and trend div section start -->
+        <section class="container  d-flex justify-content-between">
+            <div id="sort">
+                <div>item-1</div>
+                <div>item-2</div>
+            </div>
+            <div class="d-flex">
+                <div id="todays-pic" class="fs-3 fw-bolder border border-lg m-2 p-2 rounded-3">Today's Pic</div>
+                <div id="Tranding" class="fs-3 fw-bolder border border-lg m-2 p-2 rounded-3 ">Tranding</div>
+            </div>
+        </section>
+        <!-- sort and trend div section end -->
 
 
         <!-- diplay news section start  -->
