--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/51678f4053.js" crossorigin="anonymous"></script>
+
+
+    <style>
+        h6 {
+            font-size: 20px;
+            margin: 0%;
+        }
+    </style>
+
+
+
 </head>
 
 <body class="  ">
@@ -21,10 +32,11 @@
                             OF
                             NATION</a></div>
                     <div class="d-flex justify-content-end " role="search">
-                        <button id="navbar-news" class="btn btn-light m-4 h-25">News</button>
+                        <button id="navbar-news" class="btn btn-light m-4 h-25 mt-5">News</button>
                         <!-- <input class="form-control me-2 " type="search" placeholder="Search" aria-label="Search"> -->
-                        <button id="btn-blog" class="btn btn-light m-4 h-25" type="submit">BLOG</button>
-                        <img class="img-fluid rounded float-end w-25 h-25" src="image/player-1.png" alt="">
+                        <button id="btn-blog" class="btn btn-light m-4 h-25 mt-5" type="submit">BLOG</button>
+                        <img style="height: 10%;width: 20%;" class="img-fluid rounded float-end  "
+                            src="image/player-1.png" alt="">
                     </div>
                 </div>
 
@@ -58,6 +70,7 @@
         </section>
         <!-- news  number section end -->
 
+
         <!-- sort and trend div section start -->
 
         <section class="container d-sm-grid  d-md-flex justify-content-between">
@@ -75,11 +88,27 @@
         <!-- sort and trend div section end -->
 
 
+        <!-- spiner section start  -->
+
+        <section id="spiner" class="container d-none mt-5">
+            <div class="d-flex justify-content-center">
+                <div class="spinner-border" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+
+        </section>
+
+        <!-- spiner section end -->
+
+
+
+
         <!-- diplay news section start  -->
-        <section class="container">
+        <section id="displaySection" class="container">
             <div id="display-details" class="row">
-                <div class="col">
-                    <!-- 
+                <!-- <div class="col"> -->
+                <!-- 
                     <div class="card mb-3 my-3">
                         <div class="row g-0">
                             <div class="col-md-4">
@@ -129,7 +158,7 @@
                         </div>
                     </div> -->
 
-                </div>
+            </div>
 
             </div>
         </section>
