navbar responsive done

--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
 
         <section class="container mt-5">
             <nav class="navbar bg-light">
-                <div class="container-fluid ">
+                <div class="container-fluid d-flex flex-sm-column flex-md-row ">
                     <div><a class="navbar-brand  fw-bold"> <span class=" bg-info text-light fs-1 fw-bold ">NEWS</span>
                             OF
-                            NATION</a></div>
+                            NATION</a>
+                    </div>
                     <div class="d-flex justify-content-end " role="search">
                         <button id="navbar-news" class="btn btn-light m-4 h-25 mt-5">News</button>
                         <!-- <input class="form-control me-2 " type="search" placeholder="Search" aria-label="Search"> -->
