--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <!-- catagory section start  -->
 
         <section class="container">
+            <h3>catagories</h3>
             <div id="display-catagory" class="d-flex flex-wrap justify-content-between mt-3">
 
 
@@ -63,7 +64,7 @@
 
     <main>
         <!-- news  number section start -->
-        <section class="container">
+        <section class="container ">
             <div class="mb-3 mt-3">
                 <!-- <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label> -->
                 <textarea class="form-control fw-bolder fs-4 p-3 " id="Textarea1" rows="1"></textarea>
@@ -74,7 +75,7 @@
 
         <!-- sort and trend div section start -->
 
-        <section class="container d-sm-grid  d-md-flex justify-content-between">
+        <section class="container d-sm-grid  d-md-flex justify-content-between ">
             <div class="d-flex" id="sort">
                 <div class=" p-3 mx-1 fs-5 fw-bolder border border border-2 bg-white rounded-3">Sort By view :
                 </div>
